# mate-system-monitor

./: .build.yml  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  index.html  makepot  mate-system-monitor.1  mate-system-monitor.appdata.xml  mate-system-monitor.appdata.xml.in  mate-system-monitor.desktop.in.in  mate-system-monitor.pot  meson.build  meson_post_install.py  org.mate.mate-system-monitor.policy.in.in
.tx/: config  config_20221028214813.bak
2021-04-24-175129-5648-1@6f3736e021c0_gtkapplication/: index.html  report-03a824.html  report-0ab2c4.html  report-1e9733.html  report-323c96.html  report-458333.html  report-5a3f3a.html  report-86129c.html  report-8801a8.html  report-a3e815.html  report-a48ea8.html  report-a94a24.html  report-aa6081.html  report-c18fc1.html  report-cec6b2.html  report-cf8c5e.html  report-d5b7b8.html  report-edaf50.html  report-f32ec5.html  report-f90f05.html
2021-04-24-175326-5858-cppcheck@6f3736e021c0_gtkapplication/: 0.html  10.html  11.html  12.html  14.html  2.html  3.html  9.html  index.html
2021-04-24-175749-5648-1@fcd4926a8d25_gtkapplication/: index.html  report-2c1a28.html  report-32174a.html  report-33b8ff.html  report-37514b.html  report-3edc4b.html  report-4cc92a.html  report-5acac1.html  report-73ad60.html  report-73c3da.html  report-835b41.html  report-93ac8b.html  report-aab175.html  report-b81edd.html  report-bb7ca4.html  report-d890b7.html  report-de014a.html  report-e353f5.html  report-f08186.html  report-f85919.html
2021-04-24-175948-3537-cppcheck@fcd4926a8d25_gtkapplication/: 1.html  4.html  5.html  6.html  7.html  8.html  stats.html
2021-04-25-132552-5652-1@b3c7c7d45808_master/: index.html  report-0752cd.html  report-1a4499.html  report-284a56.html  report-2e1915.html  report-3a640a.html  report-483f8a.html  report-5a8152.html  report-802faa.html  report-82798e.html  report-8cf7ee.html  report-9b0ca8.html  report-a1fb44.html  report-a2436a.html  report-aa41d4.html  report-ada5fa.html  report-b80af3.html  report-cac630.html  report-cb2a80.html  report-ec2267.html
2021-04-25-132752-2834-cppcheck@b3c7c7d45808_master/: 10.html  11.html  12.html  13.html  15.html  16.html  2.html  9.html  index.html  stats.html
2021-04-25-133812-5646-1@fb5f51694952_libwnck/: index.html  report-00cbdc.html  report-0293c9.html  report-03669d.html  report-0f0e69.html  report-1a615e.html  report-1f145b.html  report-45c55c.html  report-5b6210.html  report-63cc31.html  report-6e8c09.html  report-7960dc.html  report-7e0598.html  report-9d6774.html  report-ae2cb5.html  report-d08dee.html  report-da5670.html  report-e57c3f.html  report-e70982.html  report-f2a014.html
2021-04-25-134004-8105-cppcheck@fb5f51694952_libwnck/: 0.html  1.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  3.html  4.html  5.html  6.html  7.html  8.html  index.html  stats.html
2021-05-30-162648-6111-1@91a35358aed4_master/: index.html  report-09d4d9.html  report-23a83f.html  report-2afadc.html  (+14 more)
help/: ChangeLog  LINGUAS  Makefile.am  mate-system-monitor.pot  meson.build
help/C/: index.docbook  mate-system-monitor.xml
help/af/: af.po
help/am/: am.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po
help/es_AR/: es_AR.po
help/es_CL/: es_CL.po
help/es_CO/: es_CO.po
help/es_MX/: es_MX.po
help/es_PR/: es_PR.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fil/: fil.po
help/fr/: fr.po
help/fr_CA/: fr_CA.po
help/frp/: frp.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/id/: id.po
help/ie/: ie.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/kn/: kn.po
help/ko/: ko.po
help/ku/: ku.po
help/ku_IQ/: ku_IQ.po
help/ky/: ky.po
help/li/: li.po
help/lt/: lt.po
help/lv/: lv.po
help/mai/: mai.po
help/mg/: mg.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/nah/: nah.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/oc/: oc.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/rw/: rw.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/ta/: ta.po
help/te/: te.po
help/th/: th.po
help/tr/: tr.po
help/ug/: ug.po
help/uk/: uk.po
help/ur/: ur.po
help/uz/: uz.po
help/vi/: vi.po
help/wa/: wa.po
help/xh/: xh.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
src/: Makefile.am  bacon-message-connection.c  bacon-message-connection.h  callbacks.cpp  callbacks.h  cgroups.cpp  cgroups.h  defaulttable.h  disks.cpp  disks.h  e_date.c  e_date.h  gsm_color_button.c  gsm_color_button.h  iconthemewrapper.cpp  iconthemewrapper.h  interface.cpp  interface.h  interface.ui  load-graph.cpp  load-graph.h  lsof.cpp  mate-system-monitor.convert  mate-system-monitor.schemas.in  memmaps.cpp  meson.build  msm.gresource.xml  openfiles.cpp  org.mate.mate-system-monitor.gschema.xml.in  org.mate.system-monitor.gschema.xml.in  org.mate.system-monitor.gschema.xml.in.in  preferences.ui  prettytable.cpp  prettytable.h  procactions.cpp  procactions.h  procdialogs.cpp  procdialogs.h  procman-app.cpp  procman-app.h  (+20 more)
tools/: Makefile.am  meson.build  msm_execute_helper.c
(+548 files in other folders)
