@YELP_HELP_RULES@

HELP_ID = mate-system-monitor
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = figures/addColumn.png \
	      figures/changePriority.png \
	      figures/colorPanel.png \
  	      figures/columnContextMenu.png \
	      figures/mate-system-monitor_window.png \
	      figures/memoryMaps.png \
	      figures/moreInfo.png \
	      figures/processListing.png \
	      figures/sortButton.png \
	      figures/sortMenu2.png \
	      figures/sortMenu.png \
	      figures/systemMonitor.png \
	      figures/viewMenu.png

HELP_LINGUAS = ar bg ca cs da de el es fr oc pa sv zh_CN

